2003-08-29  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* logo-competition/logos/Keran/*: 
	* logo-competition/logos/Julien_Guertault/*:
	added logos

	* screenshots/desktops/<directories>/*
	* screenshots/classes/picture_page.inc: 
	fixed bug in navigation links

	* screenshots/index.php: 
	changed links to new desktop page

	* screenshots/desktops.php: 
	disabled page

	* screenshots/desktops/index.php: 
	enabled page

	* navgen_write/navigation.inc
	generated new navigation file
	
2003-08-26  olicha  <olivier.chapuis@free.fr>

	* links.php:
	Added a link to the FVWM freshmeat page in a new Miscellaneous section

2003-08-25  Uwe Pross  <uwe.pross@gmx.net>

	* web-theme/themes/against_sw_patents_statement.inc:
	fixed html code, changed color, added link
	
	* customize_theme/theme_descriptions_helper.inc: 
	added javascript element to submit theme changes automatically
	when they occur 
	
	* definitions.inc:
	activated protest page against software patents.

2003-08-23  olicha  <olivier.chapuis@free.fr>

	* web-theme/themes/against_sw_patents_statement.inc:
	Some french fixes

2003-08-22  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Tom_Krietemeyer/*:
	* logo-competition/logos_new.php: 
	added logo

2003-08-20  Uwe Pross  <uwe.pross@gmx.net>

	* screenshots/classes/screenshot_lister.inc: 
	* screenshots/desktops/update_screenshot_db.cli
	improved concept - added image dimension and automatic generation
	of preview images and further checks and outputs
	
2003-08-19  Uwe Pross  <uwe.pross@gmx.net>

	* screenshots/classes/screenshot_lister.inc: 
	still on the screenshot page concept
	
	* screenshots/desktops.php:
	added screenshot from Jules Alberts

2003-08-18  Uwe Pross  <uwe.pross@gmx.net>

	* screenshots/Thomas_Adam-desk-1024x768.php: 
	* screenshots/Thomas_Adam-desk-1024x768.png: 
	* screenshots/Thomas_Adam-desk-1024x768-thumb.jpg:
	* screenshots/desktops.php:
	added screenshot from Thomas Adam
