@@ -1,5 +1,9 @@
 2003-08-29  Uwe Pross  <uwe.pross@gmx.net>
 
+	* logo-competition/logos_new.php:
+	* logo-competition/logos/Slava_Finkelsteyn/*:
+	added logos
+
 	* logo-competition/logos_new.php: 
 	* logo-competition/logos/Keran/*: 
 	* logo-competition/logos/Julien_Guertault/*:
